--- a/testNGproj/test-output/old/Annotation/methods-alphabetical.html
+++ b/testNGproj/test-output/old/Annotation/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Annotation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5a992">  <td>22/04/07 19:42:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parametersdemo.browserDetails(java.lang.String)[pri:1, instance:test.test.Parametersdemo@d5b810e]">browserDetails</td> 
-  <td>main@1579957528</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>22/04/07 19:42:53</td>   <td>14566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parametersdemo.enterText(java.lang.String)[pri:3, instance:test.test.Parametersdemo@d5b810e]">enterText</td> 
-  <td>main@1579957528</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>22/04/07 19:42:50</td>   <td>11415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parametersdemo.urlAccess(java.lang.String)[pri:2, instance:test.test.Parametersdemo@d5b810e]">urlAccess</td> 
-  <td>main@1579957528</td>   <td></td> </tr>
+<tr bgcolor="916fd6">  <td>22/04/19 01:36:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parametersdemo.browserDetails(java.lang.String)[pri:1, instance:com.test.Parametersdemo@72e5a8e]">browserDetails</td> 
+  <td>main@1396431506</td>   <td></td> </tr>
+<tr bgcolor="916fd6">  <td>22/04/19 01:37:18</td>   <td>53945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parametersdemo.enterText(java.lang.String)[pri:3, instance:com.test.Parametersdemo@72e5a8e]">enterText</td> 
+  <td>main@1396431506</td>   <td></td> </tr>
+<tr bgcolor="916fd6">  <td>22/04/19 01:37:11</td>   <td>46711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parametersdemo.urlAccess(java.lang.String)[pri:2, instance:com.test.Parametersdemo@72e5a8e]">urlAccess</td> 
+  <td>main@1396431506</td>   <td></td> </tr>
 </table>
