--- a/testNGproj/test-output/old/Suite/methods.html
+++ b/testNGproj/test-output/old/Suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bca8a3">  <td>22/04/14 00:20:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExecution.excelMultirecords(java.lang.String,java.lang.String)[pri:0, instance:test.test.ParallelExecution@f5acb9d]">excelMultirecords</td> 
-  <td>main@1898325501</td>   <td></td> </tr>
-<tr bgcolor="bca8a3">  <td>22/04/14 00:20:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelExecution.excelMultirecords(java.lang.String,java.lang.String)[pri:0, instance:test.test.ParallelExecution@f5acb9d]">excelMultirecords</td> 
-  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/04/19 20:16:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccessMember.accessMember()[pri:0, instance:com.cm.AccessMember@52719fb6]">accessMember</td> 
+  <td>main@1171802656</td>   <td></td> </tr>
+<tr bgcolor="9da87b">  <td>22/04/19 20:15:39</td>   <td>-29447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogintoGC.loginGC()[pri:0, instance:com.cm.LogintoGC@b9b00e0]">loginGC</td> 
+  <td>main@1171802656</td>   <td></td> </tr>
+<tr bgcolor="6bb9bf">  <td>22/04/19 20:16:19</td>   <td>11014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavtoActivityrecord.navToActivityrecordsection()[pri:0, instance:com.cm.NavtoActivityrecord@3012646b]">navToActivityrecordsection</td> 
+  <td>main@1171802656</td>   <td></td> </tr>
+<tr bgcolor="f095f8">  <td>22/04/19 20:16:24</td>   <td>15300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NotesAdd.addNotes()[pri:0, instance:com.cm.NotesAdd@4a883b15]">addNotes</td> 
+  <td>main@1171802656</td>   <td></td> </tr>
 </table>
