--- a/testNGproj/test-output/old/Default suite/methods-alphabetical.html
+++ b/testNGproj/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bca8a3">  <td>22/04/13 22:28:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Timeout.timeOut()[pri:0, instance:test.test.Timeout@2c35e847]">timeOut</td> 
-  <td>main@475603167</td>   <td></td> </tr>
+<tr bgcolor="9da87b">  <td>22/04/22 01:13:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SuushulPage2.page2()[pri:0, instance:com.shushil.SuushulPage2@59505b48]">page2</td> 
+  <td>main@1944798106</td>   <td></td> </tr>
 </table>
