--- a/testNGproj/test-output/old/Suite/methods-not-run.html
+++ b/testNGproj/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.cm.LogintoGC.loginGC</td></tr>
+<tr><td>com.cm.LogintoGC.loginGC</td></tr>
+<tr><td>com.cm.LogintoGC.loginGC</td></tr>
 </table>
